Add configurable sprite system - support 2 or 3 sprites via URL parameter

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         </script>
     </head>
     <body>
+        <!-- Add Controls Div -->
+        <div id="controls">
+            <button id="startButton">Start Recording</button>
+            <button id="stopButton" disabled>Stop Recording</button>
+        </div>
         <script type="module" src="./script.js"></script>
     </body>
 </html>
